# mles-rs

./: .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  appveyor.yml  mles-client-manage.sh  mles-manage.sh  mles.service
mles/: Cargo.toml
mles-client/: Cargo.toml  appveyor.yml
mles-client/fuzz/: Cargo.toml
mles-client/fuzz/fuzz_targets/: codecs.rs  mles_client_fuzz_decode.rs  mles_client_fuzz_encode.rs
mles-client/src/: main.rs  mles-websockets.html  ws.rs
mles-utils/: .travis.yml  Cargo.toml
mles-utils/benches/: sipbencher.rs  transcode.rs
mles-utils/fuzz/: Cargo.toml
mles-utils/fuzz/fuzz_targets/: mles_fuzz_decode.rs  mles_fuzz_decode_combined.rs  mles_fuzz_msg_decode.rs
mles-utils/references/: Cargo.toml  mlesrun.sh  rabbitmqreference.py  rabbitrun.sh
mles-utils/references/src/: main.rs
mles-utils/src/: frame.rs  lib.rs  local_db.rs  peer.rs  server.rs
mles/src/: frame.rs  local_db.rs  main.rs  messaging.rs  peer.rs  unit_main.rs  userchannel.rs
src/: auth.rs  cache.rs  channels.rs  compression.rs  http.rs  lib.rs  main.rs  metrics.rs  mina.rs  peers.rs  proxy.rs  server.rs  types.rs  websocket.rs
static/: www.mles.io
static/mles.io/: app.html  arkiheader.html  blog.html  index.html  legal.html
static/mles.io/css/: mlestalk.css  style.css  zoom.css
static/mles.io/mlestalk/: mlestalk_version.json
sysutils/: mles-client-manage.sh  mles-manage.sh  mles.service
utils/: mles-client.service  mles-manage.sh  mles.service
