[package]
name = "mles"
version = "2.0.0"
authors = ["jq-rs"]
edition = "2021"

description = "Mles - a distributed publish/subscribe data server"
license = "MPL-2.0"
repository = "https://github.com/jq-rs/mles-rs"
documentation = "https://mles.io"
readme = "README.md"
categories = ["network-programming"]
keywords = ["protocol", "publish-subscribe", "websocket", "mles"]

[dependencies]
tokio = { version="1.19.2", features = ["full"] }
tokio-stream = { version="0.1.9", features = ["net"] }
tokio-util = { version="0.7.3", features = ["compat"] }
tokio-rustls = "0.24.1"
rustls-acme = { version="0.7", default-features = false, features = ["tokio"] }
warp = "0.3.4"
simple_logger = "2.1.0"
clap = { version = "4", features = ["derive"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
crossbeam-channel = "0.5"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
siphasher = "1.0.0"

[profile.release]
lto = true
