[package]
name = "mles-client"
version = "1.1.0"
edition = "2018"

authors = ["jq-rs"]
description = "Mles-client, a distributed data protocol example (chat) client/ws-proxy"
license = "MPL-2.0"
repository = "https://github.com/jq-rs/mles-rs"
documentation = "http://mles.io"
readme = "../README.md"
categories = ["network-programming"]
keywords = ["protocol", "publish", "subscribe", "mles", "websocket"]

[profile.release]
lto = true

[dependencies]
mles-utils = "1.1"
futures = "0.1"
tokio-core = "0.1"
tokio-codec = "0.1"
bytes = "0.4"
tokio-proto = "0.1"
tokio-service = "0.1"
tungstenite = "0.6"
tokio-tungstenite = "0.6"

[badges]
travis-ci = { repository = "jq-rs/mles-rs" }
appveyor = { repository = "jq-rs/mles-rs" }
