[package]
name = "mles-utils"
version = "1.0.4"

authors = ["jq-rs"]
description = "Mles-utils for Mles server and clients"
license = "MPL-2.0"
repository = "https://github.com/jq-rs/mles-rs"
documentation = "https://docs.rs/mles-utils"
readme = "../README.md"
categories = ["network-programming"]
keywords = ["mles", "publish", "subscribe", "network", "cbor"]

[profile.release]
lto = true

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_cbor = "0.6"
serde_bytes = "0.10"
siphasher = "0.2"
futures = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
bytes = "0.4"
 
[lib]
test = true

[badges]
travis-ci = { repository = "jq-rs/mles-rs" }
appveyor = { repository = "jq-rs/mles-rs" }
