[package]
name = "mles-utils"
version = "1.1.7"
authors = ["jq-rs"]
edition = "2018"

description = "Mles-utils for Mles server and clients"
license = "MPL-2.0"
repository = "https://github.com/jq-rs/mles-rs"
documentation = "https://docs.rs/mles-utils"
readme = "../README.md"
categories = ["network-programming"]
keywords = ["mles", "publish-subscribe", "protocol", "cbor"]

[profile.release]
lto = true

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_cbor = "0.11"
serde_bytes = "0.11"
siphasher = "0.3"
futures = "0.1"
tokio = "0.1"
bytes = "0.4"

[lib]
test = true

[badges]
travis-ci = { repository = "jq-rs/mles-rs" }
appveyor = { repository = "jq-rs/mles-rs" }
