[package]
name = "mles"
version = "1.0.4"
authors = ["jq-rs"]
description = "Mles - a distributed publish/subscribe data server"
license = "MPL-2.0"
repository = "https://github.com/jq-rs/mles-rs"
documentation = "http://mles.io"
readme = "../README.md"
categories = ["network-programming"]
keywords = ["mles", "publish", "subscribe", "network", "cbor"]

[profile.release]
lto = true

[dependencies]
mles-utils = "1.0" 

[badges]
travis-ci = { repository = "jq-rs/mles-rs" }
appveyor = { repository = "jq-rs/mles-rs" }
