[package]
name = "mles"
version = "1.1.2"
authors = ["jq-rs"]
edition = "2018"

description = "Mles - a distributed publish/subscribe data server"
license = "MPL-2.0"
repository = "https://github.com/jq-rs/mles-rs"
documentation = "http://mles.io"
readme = "../README.md"
categories = ["network-programming"]
keywords = ["protocol", "publish", "subscribe", "cbor", "mles"]

[profile.release]
lto = true

[dependencies]
mles-utils = "1.1"

[badges]
travis-ci = { repository = "jq-rs/mles-rs" }
appveyor = { repository = "jq-rs/mles-rs" }
