[package]
name = "mles-reference"
version = "0.1.1"

authors = ["jq-rs"]
description = "Mles-utils for Mles server and clients"
license = "MPL-2.0"
repository = "https://github.com/jq-rs/mles-rs"
documentation = "https://docs.rs/mles-utils"
readme = "../README.md"
categories = ["network-programming"]
keywords = ["mles", "publish", "subscribe", "network", "cbor"]

[profile.release]
lto = true

[dependencies]
mles-utils = { path = "../" }
 
[badges]
travis-ci = { repository = "jq-rs/mles-rs" }
appveyor = { repository = "jq-rs/mles-rs" }
